# GhostFragment

./: .buildinfo  .gitignore  CMakeLists.txt  GhostFragment.kdev4  README.md  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js
.github/: .licenserc.yaml
.kdev4/: GhostFragment.kdev4
_sources/: index.rst.txt
background/: frag_v_nmer.html  fragment_based_methods.html  fragment_vs_nmer.html  index.html  terminology.html
bibliography/: index.html
cxx_api/: annotated.html  aos_8hpp_source.html  broken__bonds_8hpp_source.html  capped_8hpp_source.html  capping_8hpp_source.html  caps_8hpp_source.html  charge__multiplicity__assigner_8hpp_source.html  classes.html  classghostfragment_1_1Caps-members.html  classghostfragment_1_1Caps.html  classghostfragment_1_1FragmentedSystem-members.html  classghostfragment_1_1FragmentedSystem.html  classghostfragment_1_1MolecularGraph-members.html  classghostfragment_1_1MolecularGraph.html  classghostfragment_1_1NMerSystem-members.html  classghostfragment_1_1NMerSystem.html  classghostfragment_1_1detail___1_1NMerSystemPIMPL-members.html  classghostfragment_1_1detail___1_1NMerSystemPIMPL.html  classghostfragment_1_1equation_1_1Expression-members.html  classghostfragment_1_1equation_1_1Expression.html  classghostfragment_1_1equation_1_1Term-members.html  classghostfragment_1_1equation_1_1Term.html  connectivity_8hpp_source.html  connectivity__table_8hpp_source.html  dir_16d05509dcc4baddede917aeb67b4f58.html  dir_32b365638793d838198238a885c51e51.html  dir_45bf9afebf3833e4240b1bd2c40004b2.html  dir_5c0d64f70903e893b1efe571a4b8de29.html  dir_5e2f1e5238b1f3bbf932f4bfc8edc26a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_82a48ba98bbf10b5bc9abc64ac9396fe.html  dir_8b538fc164a3d2de9a9016dca97f2c33.html  dir_8d7ebae61266368a97ceceb68cfe4fb6.html  dir_9dafc7c1531230efc524726eb88b6e1e.html  dir_9ef0c00650e979ec1c44bc466e91cbb2.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_dfba9c22d88243a43737d31273d5b1c9.html  dir_e1c0b72b47e03ed5f1d0ed93c980e2aa.html  dir_e71d665937fffe23cb34ef0151b1fd93.html  dir_ee1a12cdc52fc858aea3d26f67eaa735.html  (+88 more)
design/: considerations.html  index.html
developer/: index.html
doc/: conf.py
docs/: Makefile  requirements.txt
ghostfragment/: types.hpp
ghostfragment_cxx_api/: annotated.html  broken__bonds_8hpp_source.html  capped__fragments_8hpp_source.html  capping_8hpp_source.html  classes.html  classghostfragment_1_1NuclearGraph-members.html  classghostfragment_1_1NuclearGraph.html  classghostfragment_1_1detail___1_1NuclearGraphPIMPL-members.html  classghostfragment_1_1detail___1_1NuclearGraphPIMPL.html  connectivity__table_8hpp_source.html  covalent__radius_8hpp_source.html  dir_000012_000000.html  dir_5c0d64f70903e893b1efe571a4b8de29.html  dir_5c0d64f70903e893b1efe571a4b8de29_dep.map  dir_5c0d64f70903e893b1efe571a4b8de29_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_82fd10141a7b56898b7564a416dd7b0e.html  dir_8a8fd10a48331090bb0a10cdf589ef06.html  dir_9ef0c00650e979ec1c44bc466e91cbb2.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_dfba9c22d88243a43737d31273d5b1c9.html  dir_e1c0b72b47e03ed5f1d0ed93c980e2aa.html  dir_e46115e0ddd83a5ac33f3655cb027bb5.html  dir_e71d665937fffe23cb34ef0151b1fd93.html  dir_ee1a12cdc52fc858aea3d26f67eaa735.html  dir_f9bfa40b5ff391552f8f4acf7a1de464.html  dir_fedf754aef2100308e4bc2f6df8edfb2.html  drivers_8hpp_source.html  files.html  fragment__weights_8hpp_source.html  fragmented__chemical__system_8hpp_source.html  fragmented__nuclei_8hpp_source.html  fragmenting_8hpp_source.html  functions.html  functions_func.html  functions_type.html  ghostfragment_8hpp.html  ghostfragment_8hpp__incl.map  (+31 more)
module_api/: All_nmers.html  Atomic_Capping.html  Bond-Based_Fragmenter.html  (+13 more)
(+869 files in other folders)
